--- a/client/templates/policies.html
+++ b/client/templates/policies.html
@@ -221,7 +221,7 @@
             <h3>FSSAI License</h3>
             <p>
               Bari Foods operates under FSSAI License No:
-              <strong>[INSERT YOUR 14-DIGIT LICENSE NUMBER]</strong>
+              <strong>22225043000372</strong>
             </p>
           </div>
 
@@ -248,7 +248,7 @@
         </div>
         <p>Savor tradition where every bite echoes Royal Rajasthani flavor and brings you closer to our rich culinary heritage.</p>
         <div class="footer-socials">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61585798942050" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/919829288937?text=Hello%20Bari%20Foods%2C%20I%20want%20to%20place%20an%20order" target="_blank" aria- label="Chat on WhatsApp">
             <i class="fab fa-whatsapp"></i>
@@ -288,7 +288,7 @@
     </div>
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p>Copyright © 2025 Bari Foods | All rights reserved</p>
+        <p>Copyright &copy; 2025 Bari Foods | All rights reserved</p>
       </div>
     </div>
   </footer>
