--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -139,7 +139,7 @@
           heritage.</p>
 
         <div class="footer-socials">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=61585798942050" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/919829288937?text=Hello%20Bari%20Foods%2C%20I%20want%20to%20place%20an%20order" target="_blank" aria-label="Chat on WhatsApp">
             <i class="fab fa-whatsapp"></i>
@@ -186,7 +186,7 @@
     <!-- Bottom -->
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p>Copyright © 2025 Bari Foods | All rights reserved</p>
+        <p>Copyright &copy; 2025 Bari Foods | All rights reserved</p>
       </div>
     </div>
   </footer>
