--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -251,12 +251,9 @@
             <i class="fa-solid fa-envelope"></i>
             Mail Us
           </a>
-          <a href="https://www.instagram.com/barifoodsofficial/"
-            target="_blank"
-            class="btn btn-outline">
+          <a href="https://www.instagram.com/barifoodsofficial/" target="_blank" class="btn btn-outline">
             <i class="fab fa-instagram insta-icon"></i> Follow Us
-        </a>
-
+          </a>
         </div>
       </div>
     </section>
@@ -275,9 +272,11 @@
           heritage.</p>
 
         <div class="footer-socials">
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://wa.me/919829288937?text=Hello%20Bari%20Foods%2C%20I%20want%20to%20place%20an%20order" target="_blank" aria-label="Chat on WhatsApp">
+          <a href="https://www.facebook.com/profile.php?id=61585798942050" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i
+              class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/919829288937?text=Hello%20Bari%20Foods%2C%20I%20want%20to%20place%20an%20order"
+            target="_blank" aria-label="Chat on WhatsApp">
             <i class="fab fa-whatsapp"></i>
           </a>
           <a href="https://www.youtube.com/@barifoodsofficial" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
