--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -153,9 +153,8 @@
         <div class="footer-column">
           <h4>Information</h4>
           <ul>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Our Services</a></li>
-            <li><a href="#">FAQs</a></li>
+            <li><a href="index.html#about">About Us</a></li>
+            <li><a href="index.html#services">Our Services</a></li>
           </ul>
         </div>
 
