--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -177,8 +177,6 @@
             <li class="address">Jaipur, RJ 302001</li>
           </ul>
         </div>
-
-
       </div>
     </div>
 
@@ -188,7 +186,7 @@
         <p>Copyright &copy; 2025 Bari Foods | All rights reserved</p>
       </div>
     </div>
-  </footer>
+  </footer>  
 
   <!-- Authentication Modal -->
   <div class="auth-modal" id="authModal">
@@ -202,7 +200,7 @@
       <div class="auth-form login-form active" id="loginForm">
         <div class="auth-header">
           <div class="auth-logo">
-            <img src="../static/img/bari.jpg" alt="Bari Foods">
+            <img src="/static/img/bari.jpg" alt="Bari Foods">
             <h2>Welcome Back</h2>
           </div>
           <p class="auth-subtitle">Sign in to your account</p>
@@ -251,7 +249,7 @@
       <div class="auth-form signup-form" id="signupForm">
         <div class="auth-header">
           <div class="auth-logo">
-            <img src="../static/img/bari.jpg" alt="Bari Foods">
+            <img src="/static/img/bari.jpg" alt="Bari Foods">
             <h2>Join Bari Foods</h2>
           </div>
           <p class="auth-subtitle">Create your account to get started</p>
@@ -331,9 +329,9 @@
     </div>
   </div>
 
+  <script type="module" src="../static/js/script.js"></script>
   <script type="module" src="../static/js/products.js" defer></script>
   <script src="../static/js/header.js"></script>
-  <script src="../static/js/profile.js"></script>
 </body>
 
 </html>
